--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-USERNAME=postgres
+USERNAME=admin
 HOST=localhost
 PORT=5432
 DBNAME=postgres
 SSLMODE=disable
-DB_PASSWORD=postgres
+DB_PASSWORD=admin
